# Advent-of-Code

./: .gitignore
03/: 3a.py
04/: 4a.py  passports.txt
07/: 7b.py  input_clean_dict.txt  input_clean_dict_test.txt
09/: 9a.py
1/: 1b.py
10/: 10a.py
11/: 11b.py
14/: 14a.py  14b.py
15/: 15a.py
16/: 16a.py  16b.py
17/: 17a.py  17b - multiprocessing.py  17b.py
18/: 18b.py  tests_a.py  tests_b.py
19/: 19a_alt_invalid.py  19b.py
2020/01/: 1a.py
2020/02/: 2a.py  2b.py
2020/04/: 4b.py
2020/05/: 5b.py
2020/06/: input_b.txt
2020/07/: input_clean_dict_2.txt  input_clean_list.txt  input_clean_list_2.txt
2020/08/: 8a.py
2020/09/: 9b.py
2020/10/: 10b.py
2020/11/: 11a.py
2020/12/: 12a.py  12b.py
2020/13/: 13a.py  13b-processes.py  13b.py
2020/15/: 15b.py
2020/17/: 17b.py
2020/18/: 18a.py  18b.py  tests_b.py
2020/19/: 19a.py
2021/01/: 1a.py
2021/02/: 2a.py  2b.py
2021/1/: 1b.py
2022/01/go/: 1a.go  1b.go  main.go
2022/01/python/: 1a.py  1b.py
2022/02/go/: 2a.go  2b.go  main.go
2022/02/python/: 2a.py  2b.py
2022/03/go/: 3a.go  main.go
2022/03/python/: 3a.py  3b.py
2022/04/python/: 4a.py  4b.py
2022/05/python/: 5a.py  5b.py
2022/06/python/: 6a.py  6b.py
2022/07/python/: 7a.py  7b.py
2022/08/python/: 8a.py  8b.py
2022/09/debugging/: points_correct.csv  points_incorrect.csv
2022/09/python/: 9a.py  9a_test.py  9b.py
2023/16/python/: 16a.py  16b.py  pyproject.toml
25/: 25a.py
3/: 3b.py
5/: 5a.py
6/: 6a.py  6b.py
7/: 7a.py  input_clean_list_2_test.txt
8/: 8b.py  input_test.txt
(+41 files in other folders)
