[tool.poetry]
name = "aoc-16"
version = "0.1.0"
description = ""
authors = ["Jakub Serwatka <33938646+JSerwatka@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
